# call-evaluation-engine

./: .env.example  .gitignore  README.md  pyproject.toml  render.yaml  requirements.txt
app/: streamlit_app.py
data/labeled/: annotations_compliance.csv  annotations_profanity.csv
docs/: architecture.md
reports/: evaluation_report.txt
src/call_evaluation/: __init__.py  config.py  ingestion.py  visualization.py
src/call_evaluation/detectors/: __init__.py
src/call_evaluation/detectors/llm/: __init__.py  compliance.py  profanity.py
src/call_evaluation/detectors/llm/prompts/: compliance_v1.txt  profanity_v1.txt
src/call_evaluation/detectors/regex/: __init__.py  compliance.py  profanity.py
src/call_evaluation/metrics/: __init__.py  call_metrics.py
src/call_evaluation/models/: __init__.py  analysis.py  transcript.py
src/call_evaluation/services/: __init__.py  analysis_service.py  exceptions.py  llm_client.py
src/call_evaluation/utils/: text.py
tests/: test_ingestion.py  test_llm_parsing.py  test_metrics.py  test_profanity_detectors.py  test_prompt_regression.py  test_regex_detectors.py
tests/fixtures/: single_speaker_transcript.json  valid_transcript.yaml  voicemail_transcript.json  wrong_person_transcript.json
tools/: annotator.py  evaluate.py
